(In Git)

 === New features
 === Bufixes

== 0.3.5 2009-09-30 The Pony Release!

 === New features
 * Support for Pony mailer library. (Rob Holland)

== 0.3.4 2009-09-26

=== Bugfixes
 * Typo and logic fixes for DeliverFrom matcher. (Yury Kotlyarov)

 == 0.3.3 2009-09-18

 === New features
 * DeliverFrom matcher. i.e. email.should deliver_from(blah) or email.should be_delivered_from(blah) (Diego Carrion)

 == 0.3.2 2009-09-10

 === New features
  * Support for delayed_job. (Kieran Pilkington)

 == 0.3.1 2009-08-19
This release is a general refactoring of the steps and helpers.
The example rails app was also updated to use the lateset rails and webrat.  It also takes advantages
and the newer step definistions including the new third-person forms.

Some of the generated steps are being removed in favor of some of the newer ones.  The older ones
will remain until 0.4.0 but will issue deprecation warnings.

Big shoutout to Kieran Pilkington who did the majority of work for this release.

 == 0.3.0 2009-08-13

 === New features
  * New helper #last_email_address which returns the last address used by email-spec for that scenario. (Ben Mabey)
  * Steps now support third person language. (Kieran P)
  * "[email] should receive ... " now supports "an" instead of just an integer. (Kieran Pilkington)
    With these changes, the following is now possible:

      Then "jack@example.com" should receive an email
      When they open the email
      Then they should see "Account has been created" in the subject

  * Additional default steps (Balint Erdi)
    * Then /^I should not receive any emails?$/
    * When %r{^"([^"]*?)" opens? the email$} do |address|

 === Bufixes

 == 0.2.1 2009-5-29

 === New Features
  * BCC RSpec matcher. (Josh Nichols)

 === Bugfixes
  * Include BCCed and CCed messsages in the mailbox. (Jakub Kosiński)

== 0.2.0 2009-6-08
No changes. Bumping version for RubyForge release.


 == 0.1.4 2009-5-29

 === Bufixes